--- a/modules/cnc-public-chat/bot/config.json
+++ b/modules/cnc-public-chat/bot/config.json
@@ -4,6 +4,6 @@
   "password": "",
   "gameId": "dcss-0.31-sprint",
   "discordGuild": "NetHack Live & Crawl Nemelex Cards",
-  "discordChannel": "general",
+  "discordChannel": "crawl-nemelex-cards",
   "discordToken": ""
 }
