--- a/modules/cnc-public-chat/bot/config.json
+++ b/modules/cnc-public-chat/bot/config.json
@@ -4,5 +4,5 @@
   "username": "CNCPublicChat",
   "gameId": "dcss-0.31-sprint",
   "discordGuild": "NetHack Live & Crawl Nemelex Cards",
-  "discordChannel": "crawl-nemelex-cards",
+  "discordChannel": "crawl-nemelex-cards"
 }
