--- a/modules/cnc-public-chat/bot/config.json
+++ b/modules/cnc-public-chat/bot/config.json
@@ -2,7 +2,9 @@
   "entrypoint": "https://chat.nemelex.cards",
   "websocket": "wss://crawl.nemelex.cards/socket",
   "username": "CNCPublicChat",
+  "password": "",
   "gameId": "dcss-0.31-sprint",
   "discordGuild": "NetHack Live & Crawl Nemelex Cards",
-  "discordChannel": "crawl-nemelex-cards"
+  "discordChannel": "crawl-nemelex-cards",
+  "discordToken": ""
 }
