--- a/backends/cnc-chat-server/package.json
+++ b/backends/cnc-chat-server/package.json
@@ -2,7 +2,7 @@
   "name": "cnc-chat",
   "version": "1.0.0",
   "description": "",
-  "main": "../index.js",
+  "main": "../../modules/cnc-chat/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
