--- a/backends/cnc-open-sound-pack/package.json
+++ b/backends/cnc-open-sound-pack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dcss-open-sound-pack",
+  "name": "cnc-open-sound-pack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
